attempting to slowly roll out mobile fixes. currently added new header to skills section, as well as removed the background effect on mobile. slightly changing css for the frameworks to test if it fixes the iphone 13/14 issue, text reappearing/dissappearing. new logo for mobile users only.

--- a/src/component/skills/skills.module.css
+++ b/src/component/skills/skills.module.css
@@ -1,30 +1,22 @@
+.header {
+    margin-top: 50px;
+    font-size: 0.8rem;
+    mix-blend-mode: difference;
+    color: rgba(var(--foreground-rgb), 0.5);
+}
+
 .frameworks {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     
     flex-wrap: wrap;
-    margin-top: 50px;
-
-    mix-blend-mode: difference;
     font-size: 0.9rem;
+    color: rgba(var(--foreground-rgb), 1);
 }
 
 @media (max-width: 1150px){
     .frameworks {
         grid-template-columns: repeat(4, 1fr);
-    }
-}
-
-@media (max-width: 800px){
-    .frameworks {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-
-@media (max-width: 500px){
-    .frameworks {
-        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -61,6 +53,19 @@
     width: 0%; 
     height: 100%;
     background: rgba(var(--foreground-rgb), 1);
-    z-index: 0;
+    z-index: 2;
     mix-blend-mode: difference;
+}
+
+@media (max-width: 800px){
+    .frameworks {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+@media (max-width: 500px){
+    .frameworks {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
